--- a/views/home.mustache
+++ b/views/home.mustache
@@ -14,7 +14,7 @@
 
         <!-- MAIN BANNER -->
 
-        <div class="row px-0 mx-0 mt-4 mb-md-4 mb-sm-0">
+        <div class="row px-0 mx-0 mt-5 pt-5 mb-md-4 mb-sm-0">
           <div class="col-md-5 g-0 mb-0">
               <img src="images/logo.png" alt="" class="img-fluid d-none d-md-block" />
               <img src="images/logo_thin.png" alt="" class="img-fluid d-md-none" />
@@ -70,35 +70,97 @@
       </div>
        </main>
 
+        <div class="container col-10 mt-5 mb-5">
 
+          <h2 id="HIW" class="text-center">How It Works</h2>
 
-         <div class="container mt-5 mb-5">
- 
-            <div class="p-5">
-                <h2  id="HIW" class="text-center ">How It Works</h2>
-                {{! <h3 class="text-center ">Experience a new way shop for your next car</h3> }}
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+              </ol>
+              <div class="carousel-inner">
+                <div class="carousel-item">
+                  <img class="d-block w-100 active" src="/images/audi_rs3.jpeg" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="/images/audi_rs3.jpeg" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="/images/audi_rs3.jpeg" alt="Third slide">
+                </div>
               </div>
-            
-              <div class= "row mt-6 pb-5 ">
-                <div class="flex col-md-5 g-0 justify-content-center">
-                  <div class="column text-center width:100%">
-                  <h3>This </h3>
-                  <h4>This sidoasjiodsa </h4>
-                  </div>
-                </div>
-                <div class="flex col-md-7 g-0 mb-0">
-                  <div class= "container">
-                  <img src="images/signin2.png" style="width:100%" alt="" class="img-fluid width 100%" />
-                   </div>
-              
-                </div>
-              
-              
-              
+              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div> 
+        </div>
+
+        <!-- Contact us Form -->
+        <div class="container col-10 mt-5 mb-5">
+ 
+          
+          <h2 id="contact-us" class="text-center ">Contact Us</h2>
+          
+        
+          <div class="row">
+            <div class="col-6">
+              <div class="form-group mt-4">
+                <label for="firstName">First Name:</label>
+                <input type="text" class="form-control rounded-0 mt-2" id="firstName" placeholder="First name" name="firstName">
+              </div>
+            </div>
+
+            <div class="col-6">
+              <div class="form-group mt-4">
+                <label for="lastName">Last Name:</label>
+                <input type="text" class="form-control rounded-0 mt-2" id="lastName" placeholder="Last name" name="lastName">
               </div>
           </div>
+
+          <!-- Email address field -->
+          
+          <div class="row">
+            <div class="col-6">
+              <div class="form-group mt-4">
+                <label for="contact-email">Email Address:</label>
+                <input type="email" class="form-control rounded-0 mt-2" id="contact-email" placeholder="example@email.com" name="email">
+              </div>
+            </div>
+
+            <div class="col-6">
+              <div class="form-group mt-4">
+                <label for="contact-number">Phone Number:</label>
+                <input type="text" class="form-control rounded-0 mt-2" id="contact-number" placeholder="123-456-7890" name="phoneNumber">
+              </div>
+            </div>
+
+          </div>
+          
+
+          <!-- Mesage field -->
+          
+          <div class="form-group mt-4">
+            <label for="message">Message:</label>
+            <textarea class="form-control rounded-0 mt-2" id="message" rows="5" placeholder="***CONTACT FORM FOR DEMONSTRATION PURPOSES ONLY***"></textarea>
+          </div>
+            
+            <div class="row mt-3 justify-content-center">
+              <div class="col-6"> 
+                <button class="btn btn-danger mt-3 mb-5 rounded-5 text-nowrap">Send</button>
+              </div>
+            </div>
+
+        </div>
+
           <!-- FOOTER -->
-        {{>footer}}
+          {{>footer}}
           
         </body>
 </html>
