--- a/views/partials/menu.mustache
+++ b/views/partials/menu.mustache
@@ -33,7 +33,7 @@
                 <a class="nav-link" href="#HIW">How It Works</a>
               </li>
               <li class="nav-item m-1">
-                <a class="nav-link" href="/contact-us">Contact Us</a>
+                <a class="nav-link" href="#contact-us">Contact Us</a>
               </li>
               {{/authenticationMW}}
               {{#authenticationMW}}
